tests/baselines/reference/unicodeExtendedEscapesInRegularExpressions19(target=es5).errors.txt
unicodeExtendedEscapesInRegularExpressions19.ts(1,13): error TS1125: Hexadecimal digit expected.
unicodeExtendedEscapesInRegularExpressions19.ts(1,16): error TS1501: This regular expression flag is only available when targeting 'es6' or later.


==== unicodeExtendedEscapesInRegularExpressions19.ts (2 errors) ====
    var x = /\u{}/gu;
                
!!! error TS1125: Hexadecimal digit expected.
                   ~
!!! error TS1501: This regular expression flag is only available when targeting 'es6' or later.
    